<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".Termini">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termin"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:text="@string/odaberite_datumm"
            android:layout_marginTop="100dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:id="@+id/datumB"
            android:text="@string/datum"
            android:layout_marginTop="100dp"
            />
    </LinearLayout>
    <TimePicker
        android:layout_width="252dp"
        android:layout_height="340dp"
        android:id="@+id/timePicker"
        android:layout_marginTop="0dp"
        android:layout_marginStart="80dp"
        android:visibility="gone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeButton"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        android:text="Prihvati"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/datumT"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odaberite_vrijeme"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/text2"
            android:textSize="25sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vrijemeB"
            android:text="@string/vrijeme"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:id="@+id/vrijemeT"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodatne_informacije2"
        android:id="@+id/tt"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"/>
    <EditText
        android:layout_width="391dp"
        android:id="@+id/dodatneInfo"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints=""
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="288dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/nazad"
            android:textSize="25sp"
            android:text="@string/nazad"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishB"
            android:layout_marginStart="92dp"
            android:text="Finish"/>


    </LinearLayout>
</LinearLayout>